--- a/package.json
+++ b/package.json
@@ -19,6 +19,17 @@
   "homepage": "https://github.com/axbwh/beyond-studio-scoping#readme",
   "dependencies": {
     "curtainsjs": "^8.1.3",
-    "parcel": "^2.7.0"
+    "parcel": "^2.7.0",
+    "three.js": "^0.77.1"
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4"
   }
 }
