--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "curtainsjs": "^8.1.3",
     "parcel": "^2.7.0",
-    "three.js": "^0.77.1"
+    "three": "^0.144.0"
   },
   "devDependencies": {
     "assert": "^2.0.0",
