--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/axbwh/beyond-studio-scoping#readme",
   "dependencies": {
+    "@parcel/transformer-glsl": "^2.7.0",
     "curtainsjs": "^8.1.3",
+    "glsl-noise": "0.0.0",
     "parcel": "^2.7.0",
     "three": "^0.144.0",
     "three-subdivide": "^1.1.0"
