--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@parcel/transformer-glsl": "^2.7.0",
     "curtainsjs": "^8.1.3",
+    "glsl-easings": "^1.0.0",
     "glsl-noise": "0.0.0",
     "parcel": "^2.7.0",
     "three": "^0.144.0",
