--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "",
-    "start": "parcel app.js"
+    "start": "parcel app.js --hmr-port 50619"
   },
   "repository": {
     "type": "git",
