--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/axbwh/beyond-studio-scoping#readme",
   "dependencies": {
     "@parcel/transformer-glsl": "^2.7.0",
+    "animejs": "^3.2.1",
     "curtainsjs": "^8.1.3",
     "glsl-blend-overlay": "^1.0.5",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "0.0.0",
+    "lodash": "^4.17.21",
     "parcel": "^2.7.0",
     "three": "^0.144.0",
     "three-subdivide": "^1.1.0"
