--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@parcel/transformer-glsl": "^2.7.0",
     "animejs": "^3.2.1",
     "curtainsjs": "^8.1.3",
+    "detect-gpu": "^5.0.1",
     "glsl-blend-overlay": "^1.0.5",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "0.0.0",
