--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@parcel/transformer-glsl": "^2.7.0",
     "animejs": "^3.2.1",
+    "canvg": "^4.0.1",
     "curtainsjs": "^8.1.3",
     "detect-gpu": "^5.0.1",
     "glsl-blend-overlay": "^1.0.5",
