--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glsl-easings": "^1.0.0",
     "glsl-noise": "0.0.0",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.10.0",
     "parcel": "^2.7.0",
     "parse-color": "^1.0.0",
     "stats.js": "^0.17.0",
